--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_3_3_dualesSimplexverfahren.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_3_3_dualesSimplexverfahren.tex
@@ -10,7 +10,7 @@ Nach \cref{aussage: 3.4} ist ein Tableau
 \end{center}
 optimal, wenn $p \ge 0$ und $q \ge 0$ gelten. Nach Konstruktion gilt beim primalen Simplexverfahren stets $p \ge 0$.
 Sei nun ein Tableau $T_0$ gegeben mit $q \ge 0$, aber \textit{nicht} $p \ge 0$, d.h. es gibt eine Zeile $\sigma \in I_B$ mit $p_\sigma < 0$.
-Die zu $T_0$ gehörige Basislösung ist dann \textit{nicht} zulässig. Mithilfe des dualen Simplexverfahrens lässt sich jedoch (unter Beibehaltung von $q \ge 0$) eine zulässige Basislösung (d.h. mit "$p \ge 0$) erzeugen.
+Die zu $T_0$ gehörige Basislösung ist dann \textit{nicht} zulässig. Mithilfe des dualen Simplexverfahrens lässt sich jedoch (unter Beibehaltung von $q \ge 0$) eine zulässige Basislösung (d.h. mit $p \ge 0$) erzeugen.
 Entsprechend der bekannten Austauschregeln ergeben sich folgende Bedingungen:
 \begin{equation*}
 	\begin{alignedat}{2}
