--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_4_1_spaltengenerierung.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_4_1_spaltengenerierung.tex
@@ -15,7 +15,7 @@ Wir können uns hierbei zu Nutze machen, dass alle Spalten der Systemmatrix $A$ 
 	a^j \text{ ist Spalte von } A \equivalent a^j \in \Z_+^m \und \trans{\ell} a^j \le L
 \end{equation*}
 
-Offenbar gilt hie $c = e = \transpose{1, \dots, 1}$, sodass für eine gewählte Basismatrix $A_B$ in Schritt 2 des Simplexalgorithmus folgendes zu bestimmen wäre:
+Offenbar gilt hier $c = e = \transpose{1, \dots, 1}$, sodass für eine gewählte Basismatrix $A_B$ in Schritt 2 des Simplexalgorithmus folgendes zu bestimmen wäre:
 \begin{equation*}
 	\quer{q} \defeq \min_{j \in J_N} q_j \quad \mit \quad q_j = c_j - \trans{d} a^j = 1 - \trans{d}a^j, \quad a^j \in \Z_+^m, \trans{\ell} a^j \le L
 \end{equation*}
