--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_2_3_martingalmassArbitrageCRR.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_2_3_martingalmassArbitrageCRR.tex
@@ -65,6 +65,7 @@ Das bedeutet nun, dass wir die Baumstruktur unverändert lassen, jedoch die Übe
 \end{proof}
 
 \begin{theorem}[Risikoneutrale Bewertungsformel]
+	\label{theorem: 2.7}
 	Sei $C= h(S_1, \dots, S_N)$ ein Derivat im CRR-Modell mit EMM $\Q$. Für den Preisprozess $\folge{\Pi_n}{n \in [N]}$ von $C$ gilt
 	\begin{equation*}
 		\Pi_n = (1+r)^{-(N-n)} * \E^\Q\sqbrackets{C \mid \F_n}
