--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
@@ -72,6 +72,9 @@
 \settowidth{\zulength}{(zu a)}
 \addtolength{\zulength}{1em}
 
+\DeclareMathOperator{\ACall}{AC}
+\DeclareMathOperator{\APut}{AP}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -115,4 +118,10 @@
 \input{stochv_5_2_expectedShortfall}
 \input{stochv_5_3_risikomasseAxiomatik}
 \input{stochv_5_4_verteilteRisiken}
+
+\chapter{Optimales Stoppen \& Amerikanische Optionen}
+\label{chapter_6_optimalesStoppen}
+\input{stochv_6_0_einfuehrung}
+\input{stochv_6_1_optimalesStoppproblem}
+\input{stochv_6_2_amerikanischeOptionen}
 \end{document}
