--- a/texmf/tex/latex/homeworkMathTUD.sty
+++ b/texmf/tex/latex/homeworkMathTUD.sty
@@ -160,10 +160,10 @@
 \newcommand{\skiparound}{10pt}
 
 % >> Exercise
-\theoremstyle{break}
+\theoremstyle{plain}
 \theoremheaderfont{\osfamily\normalsize\bfseries\upshape}
-\theorembodyfont{\normalfont\normalsize}
-\theoremseparator{}
+\theorembodyfont{\osfamily\normalsize}
+\theoremseparator{.}
 \theoremsymbol{}
 \newmdtheoremenv[%
 backgroundcolor=cdblue!5,%
