--- a/Math-Ba-HANA/HANA_Funktionentheorie_Uebung/fkt_uebungen_main.tex
+++ b/Math-Ba-HANA/HANA_Funktionentheorie_Uebung/fkt_uebungen_main.tex
@@ -191,8 +191,9 @@
 % >> Lemma
 \theoremstyle{plain}
 \theoremheaderfont{\osfamily\normalsize\bfseries\upshape}
-\theorembodyfont{}
+\theorembodyfont{\itshape}
 \theoremseparator{.}
+\theoremsymbol{\textleaf}
 \theorempreskip{6pt}
 \theorempostskip{6pt}
 \newtheorem{lemma}{Lemma}
@@ -411,6 +412,7 @@
 
 
 \include{fkt_uebungen-1}
+\include{fkt_uebungen-2}
 
 
 \end{document}
