--- a/Math-Ba-HANA/HANA_Funktionentheorie_Uebung/fkt_uebungen_main.tex
+++ b/Math-Ba-HANA/HANA_Funktionentheorie_Uebung/fkt_uebungen_main.tex
@@ -26,8 +26,8 @@
 \usepackage[autostyle=true,english=british]{csquotes}
 
 \usepackage[scale=0.95]{opensans}	% new font OpenSans
-\newcommand*{\osfamily}{\fontfamily{fos}\selectfont}
-\DeclareTextFontCommand{\textos}{\osfamily}
+%\newcommand*{\fosfamily}{\fontfamily{fos}\selectfont}
+\DeclareTextFontCommand{\textos}{\fosfamily}
 
 \usepackage{xifthen}
 
@@ -118,7 +118,7 @@
 % Environment for a new exercise sheet
 \usepackage{tcolorbox}
 \newcommand{\header}{%
-        {\osfamily%
+        {\fosfamily%
             \fcolorbox{cddarkblue}{cdblue!20}{%
                 \begin{minipage}{\dimexpr0.7\linewidth-\fboxrule-\fboxsep}
                     {\huge \textbf{Hausaufgaben}} \vspace{3pt} \\
@@ -141,7 +141,7 @@
     \setcounter{themcount}{0}
     %
     \ifthenelse{\isempty{#1}}{}{%
-        {\osfamily \itshape Thema: #1} \par%\\[12pt]%
+        {\fosfamily \itshape Thema: #1} \par%\\[12pt]%
     }
 }{}
 
@@ -158,7 +158,7 @@
 
 % >> Exercises
 \theoremstyle{plain}
-\theoremheaderfont{\osfamily\normalsize\bfseries\upshape}
+\theoremheaderfont{\fosfamily\normalsize\bfseries\upshape}
 \theorembodyfont{\normalsize}
 \theoremseparator{.}
 \theoremsymbol{}
@@ -190,7 +190,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % >> Lemma
 \theoremstyle{plain}
-\theoremheaderfont{\osfamily\normalsize\bfseries\upshape}
+\theoremheaderfont{\fosfamily\normalsize\bfseries\upshape}
 \theorembodyfont{\itshape}
 \theoremseparator{.}
 \theoremsymbol{\textleaf}
@@ -400,8 +400,8 @@
 % additional comands
 %---------------------------------------
 
-
-
+\DeclareMathOperator{\Ln}{Ln}
+\DeclareMathOperator{\Arg}{Arg}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -413,6 +413,6 @@
 
 \include{fkt_uebungen-1}
 \include{fkt_uebungen-2}
-
+\include{fkt_uebungen-3}
 
 \end{document}
