--- a/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
+++ b/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
@@ -419,5 +419,6 @@ nobreak,%
 \include{pde-uebungen-2}
 \include{pde-uebungen-3}
 \include{pde-uebungen-4}
+\include{pde-uebungen-5}
 
 \end{document}
