PDE: ue06 aufgabe 1 fertig

--- a/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
+++ b/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
@@ -420,5 +420,6 @@ nobreak,%
 \include{pde-uebungen-3}
 \include{pde-uebungen-4}
 \include{pde-uebungen-5}
+\include{pde-uebungen-6}
 
 \end{document}
