PDE: ue06 fertig

--- a/Math-Ba-HANA/HANA_PDE_Uebung/pde-uebungen-6.tex
+++ b/Math-Ba-HANA/HANA_PDE_Uebung/pde-uebungen-6.tex
@@ -1,4 +1,7 @@
 \begin{exercisePage}
+	
+	\setcounter{taskcount}{14}
+	
 	\begin{task}
 		Es sei $U \subset \Rn$ ein beschränktes Gebiet und $u \in C^2(U)\cap C(\overline U)$ eine Lösung von
 		$$-\Delta u = f(u,x)\quad\text{in }U,\qquad u = g \quad\text{auf }\partial U,$$
