--- a/texmf/tex/latex/mathoperatorsMathTUD.sty
+++ b/texmf/tex/latex/mathoperatorsMathTUD.sty
@@ -154,6 +154,7 @@
 \newcommand{\dy}{\diffskip{y}}
 \newcommand{\dz}{\diffskip{z}}
 \newcommand{\da}{\diffskip{a}}
+\newcommand{\dt}{\diffskip{t}}
 
 % >> integration
 \newcommand{\Lint}{\mathcal{L}}
